<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.1</version>
    </parent>

    <groupId>ir.stts.bajet</groupId>
    <artifactId>oraxa</artifactId>
    <version>1.0.27</version>
    <name>oraxa</name>
    <description>infrastructure for java applications</description>
    <packaging>pom</packaging>

    <developers>
        <developer>
            <id>HY</id>
            <name>Hooman Yarahmadi</name>
            <email>knight.hooman@gmail.com</email>
        </developer>
    </developers>

    <modules>
        <module>log</module>
        <module>cryptography</module>
        <module>liquibase</module>
        <module>oracle</module>
        <module>orm</module>
        <module>api-client</module>
        <module>core</module>
        <module>core-mvc</module>
        <module>core-reactive</module>
        <module>cache</module>
        <module>storage</module>
        <module>redis</module>
        <module>mysql</module>
        <module>mongodb</module>
        <module>mssql</module>
        <module>db</module>
        <module>amqp</module>
        <module>elastic</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <!--To use in resource plugins like maven-resources-plugin-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!--To use in reporting plugins-->
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!--To resolve security bug in 2.9.1 version-->
        <oraxa.xmlunit-core.version>2.10.0</oraxa.xmlunit-core.version>
        <oraxa.commons-pool2.version>2.12.0</oraxa.commons-pool2.version>
        <oraxa.surefire-plugin.version>3.5.2</oraxa.surefire-plugin.version>
        <oraxa.mockito-core.version>5.15.2</oraxa.mockito-core.version>
        <oraxa.okhttp.version>4.12.0</oraxa.okhttp.version>
        <oraxa.mapstruct.version>1.6.3</oraxa.mapstruct.version>
        <oraxa.lombok.version>1.18.36</oraxa.lombok.version>
        <oraxa.lombok-mapstruct-binding.version>0.2.0</oraxa.lombok-mapstruct-binding.version>
    </properties>

    <dependencies>

        <!--Spring-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.xmlunit</groupId>
            <artifactId>xmlunit-core</artifactId>
            <version>${oraxa.xmlunit-core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>xmlunit</groupId>
                    <artifactId>xmlunit-core</artifactId>
                </exclusion>
            </exclusions>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <!--Monitoring-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-jmx</artifactId>
        </dependency>
        <!--Jackson-->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>

        <!--Common-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId>
            <version>${oraxa.commons-pool2.version}</version>
        </dependency>

        <!--Lombok-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${oraxa.lombok.version}</version>
        </dependency>

        <!--Mapstruct-->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${oraxa.mapstruct.version}</version>
        </dependency>

        <!--Mockito-->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${oraxa.mockito-core.version}</version>
            <scope>test</scope>
        </dependency>

        <!--MINIO-->
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>${oraxa.okhttp.version}</version>
        </dependency>

    </dependencies>

    <dependencyManagement>
        <dependencies>

            <!--Internal-->
            <dependency>
                <groupId>ir.stts.bajet</groupId>
                <artifactId>oraxa</artifactId>
                <version>1.0.27</version>
            </dependency>

            <!--Spring-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>3.4.1</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </resource>
        </resources>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                    <argLine>
                        -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/1.15.11/byte-buddy-agent-1.15.11.jar
                    </argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.17.1</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.9.9,)</version>
                                    <message>Maven version must be 3.9.9 or newer.</message>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>21</version>
                                    <message>JDK 21 is required to build this project.</message>
                                </requireJavaVersion>
                                <requireReleaseDeps>
                                    <onlyWhenRelease>true</onlyWhenRelease>
                                    <message>No Snapshots Allowed!</message>
                                </requireReleaseDeps>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <profiles>

        <profile>
            <id>bajet</id>
            <distributionManagement>
                <repository>
                    <id>nexus</id>
                    <url>http://192.168.5.100/repository/maven-releases/</url>
                </repository>
            </distributionManagement>
            <repositories>
                <repository>
                    <id>nexus</id>
                    <name>maven-public</name>
                    <url>http://192.168.5.100/repository/maven-public/</url>
                    <releases>
                        <enabled>true</enabled>
                    </releases>
                    <snapshots>
                        <enabled>false</enabled>
                    </snapshots>
                </repository>
            </repositories>
        </profile>

        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>Windows</family>
                </os>
            </activation>
            <properties>
                <script.executable.ext>bat</script.executable.ext>
            </properties>
        </profile>
        <profile>
            <id>unix</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <properties>
                <script.executable.ext>sh</script.executable.ext>
            </properties>
        </profile>

    </profiles>

</project>